# Behavior-Recognition

./: README.md  pyproject.toml  requirements.txt  show.py
best_train/: args.yaml
best_train/train72/: events.out.tfevents.1740673925.wusong03.245179.0  results.csv
datasets/: datasets.yaml
ultralytics/cfg/datasets/: coco.yaml
utils/: detect_face.py  utils_fit.py
